# oxidgit

./: .gitignore  GETTING_STARTED.md  README.md
learning-materials/: README.md
learning-materials/exercises/: phase-1-exercises.md  phase-2-exercises.md  phase-3-exercises.md
learning-materials/phase-1-foundations/: 00-introduction-and-roadmap.md  01-what-is-git-really.md  02-content-addressable-storage.md  03-git-objects-explained.md
learning-materials/phase-2-git-internals/: 04-exploring-git-directory.md  05-how-git-stores-data.md  06-refs-and-head.md  07-git-index.md
learning-materials/phase-3-rust-fundamentals/: 08-rust-basics-for-git.md  09-rust-error-handling.md  10-rust-file-io.md  11-rust-parsing.md
learning-materials/phase-4-building-git/: 12-project-setup-and-architecture.md  13-implementing-hash-object.md
learning-materials/reference/: glossary.md
rust-git-implementation/: Cargo.toml  README.md
rust-git-implementation/src/: index.rs  lib.rs  main.rs  repository.rs  utils.rs
rust-git-implementation/src/commands/: init.rs  mod.rs
rust-git-implementation/src/objects/: mod.rs  object.rs
